force-app/main/default/objects/IntegrationLog__c/IntegrationLog__c.object-meta.xml
<CustomObject>
    <description>Detailed log of integration operations with AI-powered analytics and conflict resolution tracking</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>