force-app/main/default/objects/IntegrationLog__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <description>Reference to the Integration Configuration</description>
    <inlineHelpText>The integration configuration this log entry relates to</inlineHelpText>
    <label>Integration</label>
    <referenceTo>IntegrationConfig__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>IntegrationLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>