force-app/main/default/objects/IntegrationLog__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Type of operation performed during integration</description>
    <inlineHelpText>The type of operation: CREATE, UPDATE, DELETE, or UPSERT</inlineHelpText>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>UPSERT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>