force-app/main/default/objects/IntegrationLog__c/fields/SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordId__c</fullName>
    <description>Source record identifier from source org</description>
    <inlineHelpText>The ID of the record in the source org</inlineHelpText>
    <label>Source Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>