force-app/main/default/objects/IntegrationLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the integration operation</description>
    <inlineHelpText>Current status: SUCCESS, FAILED, CONFLICT, or PROCESSING</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>CONFLICT</fullName>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>