force-app/main/default/objects/IntegrationLog__c/fields/TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordId__c</fullName>
    <description>Target record identifier from target org</description>
    <inlineHelpText>The ID of the record in the target org</inlineHelpText>
    <label>Target Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>